fix: little fixes - borders and text alignment

--- a/src/components/ScoreTable.module.scss
+++ b/src/components/ScoreTable.module.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	border: 2px solid #fff;
 	border-top: 0;
-	padding-bottom: 8.1rem;
+	padding-bottom: 8.2rem;
 
 	.table{
 		margin-top: 3.5rem;
@@ -41,6 +41,8 @@
 	}
 
 	.top{
+		text-align: center;
+		width: 2rem;
 		margin-right: 1rem;
 	}
 	.points {
