--- a/src/pages/Game.module.scss
+++ b/src/pages/Game.module.scss
@@ -3,7 +3,7 @@
 
 	.game__window{
 		width: 100vw;
-		height: 78.5vh;
+		height: 78.7vh;
 		margin: 0 auto;
 		border: 2px solid #fff;
 		border-top: 0;
